Mon Jul  5 08:58:59 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c: fix possible problem using utf8 on Sybase

Sat Jul  3 11:49:05 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* configure.ac src/odbc/odbc.c: minor issues

Sat Jul  3 11:14:29 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* configure.ac include/tdsodbc.h src/odbc/convert_tds2sql.c:
	* src/odbc/odbc.c src/odbc/odbc_util.c src/odbc/sql2tds.c:
	* src/odbc/sqlwparams.h:
	- add ODBC wide support (disabled by default and still
	  experimental)

Sat Jul  3 10:53:03 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/replacements/iconv.c: fix return codes from replacement iconv

Sat Jul  3 08:57:50 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* configure.ac src/replacements/iconv.c:
	- rewrote iconv replacement adding support for ucs4

Sat Jul  3 08:56:51 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/error.c src/odbc/odbc.c src/odbc/sqlwparams.h:
	- other wide encoding merges

Sat Jul  3 01:55:38 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tdsiconv.h src/replacements/iconv.c:
	- cleanup iconv replacement

Fri Jul  2 20:57:16 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/tds/token.c src/tds/util.c: cleanup

Fri Jul  2 16:07:45 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/Makefile.am src/odbc/error.c src/odbc/odbc.c:
	- src/odbc/sqlwparams.h
	- use macros to prepare code for wide encoding

Fri Jul  2 15:38:06 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tdsodbc.h src/odbc/error.c src/odbc/odbc.c:
	* src/odbc/odbc_util.c:
	- put odbc_set_string_i and odbc_set_string together, prepare for
	  wide encoding

Fri Jul  2 11:30:40 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tdsodbc.h src/odbc/descriptor.c src/odbc/error.c:
	- add desc_get_dbc and reuse it
